[gd_scene load_steps=2 format=3 uid="uid://bubk130wbtljt"]

[ext_resource type="Script" uid="uid://dl2skoo8mur1x" path="res://src/ui/components/player_hud_cluster.gd" id="1"]

[node name="PlayerHudCluster" type="Control"]
custom_minimum_size = Vector2(360, 120)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1")

[node name="Root" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PortraitShake" type="Control" parent="Root"]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 112)
layout_mode = 2

[node name="PortraitFrame" type="Panel" parent="Root/PortraitShake"]
unique_name_in_owner = true
clip_children = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortraitBackground" type="ColorRect" parent="Root/PortraitShake/PortraitFrame"]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.109804, 0.109804, 0.172549, 0.92)

[node name="PortraitTexture" type="TextureRect" parent="Root/PortraitShake/PortraitFrame"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 5
stretch_mode = 6
texture_filter = 1

[node name="BarColumn" type="VBoxContainer" parent="Root"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="TopRow" type="HBoxContainer" parent="Root/BarColumn"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="HPBadge" type="ColorRect" parent="Root/BarColumn/TopRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(38, 26)
layout_mode = 2

[node name="HPBadgeLabel" type="Label" parent="Root/BarColumn/TopRow/HPBadge"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0.1, 0.12, 0.18, 1)
theme_override_font_sizes/font_size = 18
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="ProgressBar" parent="Root/BarColumn/TopRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(248, 26)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Spacer" type="Control" parent="Root/BarColumn"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="BurstRow" type="HBoxContainer" parent="Root/BarColumn"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="BurstBadge" type="ColorRect" parent="Root/BarColumn/BurstRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(52, 22)
layout_mode = 2
color = Color(0.98, 0.9, 0.52, 1)

[node name="BurstBadgeLabel" type="Label" parent="Root/BarColumn/BurstRow/BurstBadge"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0.12, 0.1, 0.08, 1)
theme_override_font_sizes/font_size = 16
text = "BURST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BurstBar" type="ProgressBar" parent="Root/BarColumn/BurstRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(238, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
show_percentage = false

[node name="AmmoRow" type="HBoxContainer" parent="Root/BarColumn"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="AmmoLabel" type="Label" parent="Root/BarColumn/AmmoRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "AMMO --/--"

[node name="SpecialLabel" type="Label" parent="Root/BarColumn/AmmoRow"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "SPECIAL --/--"
horizontal_alignment = 2

[node name="RunStatsLabel" type="Label" parent="Root/BarColumn/AmmoRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "WAVE 01 â€¢ KILLS 0"
horizontal_alignment = 2

[node name="RunTimerLabel" type="Label" parent="Root/BarColumn/AmmoRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "TIME 00:00"
horizontal_alignment = 2
